# Services/sample/controller/accounts.go
@@ -2,8 +2,8 @@ package controller
 
 import (
 	"fmt"
-	"goprueba/modules/sample/httputil"
-	"goprueba/modules/sample/model"
+	"goprueba/Services/sample/model"
+	"goprueba/utils"
 	"net/http"
 	"strconv"
 
@@ -18,20 +18,20 @@ import (
 // @Produce  json
 // @Param id path int true "Account ID"
 // @Success 200 {object} model.Account
-// @Failure 400 {object} httputil.HTTPError
-// @Failure 404 {object} httputil.HTTPError
-// @Failure 500 {object} httputil.HTTPError
+// @Failure 400 {object} utils.HTTPError
+// @Failure 404 {object} utils.HTTPError
+// @Failure 500 {object} utils.HTTPError
 // @Router /accounts/{id} [get]
 func (c *Controller) ShowAccount(ctx *gin.Context) {
 	id := ctx.Param("id")
 	aid, err := strconv.Atoi(id)
 	if err != nil {
-		httputil.NewError(ctx, http.StatusBadRequest, err)
+		utils.NewError(ctx, http.StatusBadRequest, err)
 		return
 	}
 	account, err := model.AccountOne(aid)
 	if err != nil {
-		httputil.NewError(ctx, http.StatusNotFound, err)
+		utils.NewError(ctx, http.StatusNotFound, err)
 		return
 	}
 	ctx.JSON(http.StatusOK, account)
@@ -45,15 +45,15 @@ func (c *Controller) ShowAccount(ctx *gin.Context) {
 // @Produce  json
 // @Param q query string false "name search by q" Format(email)
 // @Success 200 {array} model.Account
-// @Failure 400 {object} httputil.HTTPError
-// @Failure 404 {object} httputil.HTTPError
-// @Failure 500 {object} httputil.HTTPError
+// @Failure 400 {object} utils.HTTPError
+// @Failure 404 {object} utils.HTTPError
+// @Failure 500 {object} utils.HTTPError
 // @Router /accounts [get]
 func (c *Controller) ListAccounts(ctx *gin.Context) {
 	q := ctx.Request.URL.Query().Get("q")
 	accounts, err := model.AccountsAll(q)
 	if err != nil {
-		httputil.NewError(ctx, http.StatusNotFound, err)
+		utils.NewError(ctx, http.StatusNotFound, err)
 		return
 	}
 	ctx.JSON(http.StatusOK, accounts)
@@ -67,18 +67,18 @@ func (c *Controller) ListAccounts(ctx *gin.Context) {
 // @Produce  json
 // @Param account body model.AddAccount true "Add account"
 // @Success 200 {object} model.Account
-// @Failure 400 {object} httputil.HTTPError
-// @Failure 404 {object} httputil.HTTPError
-// @Failure 500 {object} httputil.HTTPError
+// @Failure 400 {object} utils.HTTPError
+// @Failure 404 {object} utils.HTTPError
+// @Failure 500 {object} utils.HTTPError
 // @Router /accounts [post]
 func (c *Controller) AddAccount(ctx *gin.Context) {
 	var addAccount model.AddAccount
 	if err := ctx.ShouldBindJSON(&addAccount); err != nil {
-		httputil.NewError(ctx, http.StatusBadRequest, err)
+		utils.NewError(ctx, http.StatusBadRequest, err)
 		return
 	}
 	if err := addAccount.Validation(); err != nil {
-		httputil.NewError(ctx, http.StatusBadRequest, err)
+		utils.NewError(ctx, http.StatusBadRequest, err)
 		return
 	}
 	account := model.Account{
@@ -86,7 +86,7 @@ func (c *Controller) AddAccount(ctx *gin.Context) {
 	}
 	lastID, err := account.Insert()
 	if err != nil {
-		httputil.NewError(ctx, http.StatusBadRequest, err)
+		utils.NewError(ctx, http.StatusBadRequest, err)
 		return
 	}
 	account.ID = lastID
@@ -102,20 +102,20 @@ func (c *Controller) AddAccount(ctx *gin.Context) {
 // @Param  id path int true "Account ID"
 // @Param  account body model.UpdateAccount true "Update account"
 // @Success 200 {object} model.Account
-// @Failure 400 {object} httputil.HTTPError
-// @Failure 404 {object} httputil.HTTPError
-// @Failure 500 {object} httputil.HTTPError
+// @Failure 400 {object} utils.HTTPError
+// @Failure 404 {object} utils.HTTPError
+// @Failure 500 {object} utils.HTTPError
 // @Router /accounts/{id} [patch]
 func (c *Controller) UpdateAccount(ctx *gin.Context) {
 	id := ctx.Param("id")
 	aid, err := strconv.Atoi(id)
 	if err != nil {
-		httputil.NewError(ctx, http.StatusBadRequest, err)
+		utils.NewError(ctx, http.StatusBadRequest, err)
 		return
 	}
 	var updateAccount model.UpdateAccount
 	if err := ctx.ShouldBindJSON(&updateAccount); err != nil {
-		httputil.NewError(ctx, http.StatusBadRequest, err)
+		utils.NewError(ctx, http.StatusBadRequest, err)
 		return
 	}
 	account := model.Account{
@@ -124,7 +124,7 @@ func (c *Controller) UpdateAccount(ctx *gin.Context) {
 	}
 	err = account.Update()
 	if err != nil {
-		httputil.NewError(ctx, http.StatusNotFound, err)
+		utils.NewError(ctx, http.StatusNotFound, err)
 		return
 	}
 	ctx.JSON(http.StatusOK, account)
@@ -138,20 +138,20 @@ func (c *Controller) UpdateAccount(ctx *gin.Context) {
 // @Produce  json
 // @Param  id path int true "Account ID" Format(int64)
 // @Success 204 {object} model.Account
-// @Failure 400 {object} httputil.HTTPError
-// @Failure 404 {object} httputil.HTTPError
-// @Failure 500 {object} httputil.HTTPError
+// @Failure 400 {object} utils.HTTPError
+// @Failure 404 {object} utils.HTTPError
+// @Failure 500 {object} utils.HTTPError
 // @Router /accounts/{id} [delete]
 func (c *Controller) DeleteAccount(ctx *gin.Context) {
 	id := ctx.Param("id")
 	aid, err := strconv.Atoi(id)
 	if err != nil {
-		httputil.NewError(ctx, http.StatusBadRequest, err)
+		utils.NewError(ctx, http.StatusBadRequest, err)
 		return
 	}
 	err = model.Delete(aid)
 	if err != nil {
-		httputil.NewError(ctx, http.StatusNotFound, err)
+		utils.NewError(ctx, http.StatusNotFound, err)
 		return
 	}
 	ctx.JSON(http.StatusNoContent, gin.H{})
@@ -166,19 +166,19 @@ func (c *Controller) DeleteAccount(ctx *gin.Context) {
 // @Param  id path int true "Account ID"
 // @Param file formData file true "account image"
 // @Success 200 {object} controller.Message
-// @Failure 400 {object} httputil.HTTPError
-// @Failure 404 {object} httputil.HTTPError
-// @Failure 500 {object} httputil.HTTPError
+// @Failure 400 {object} utils.HTTPError
+// @Failure 404 {object} utils.HTTPError
+// @Failure 500 {object} utils.HTTPError
 // @Router /accounts/{id}/images [post]
 func (c *Controller) UploadAccountImage(ctx *gin.Context) {
 	id, err := strconv.Atoi(ctx.Param("id"))
 	if err != nil {
-		httputil.NewError(ctx, http.StatusBadRequest, err)
+		utils.NewError(ctx, http.StatusBadRequest, err)
 		return
 	}
 	file, err := ctx.FormFile("file")
 	if err != nil {
-		httputil.NewError(ctx, http.StatusBadRequest, err)
+		utils.NewError(ctx, http.StatusBadRequest, err)
 		return
 	}
 	ctx.JSON(http.StatusOK, Message{Message: fmt.Sprintf("upload complete userID=%d filename=%s", id, file.Filename)})
