# Services/sample/controller/bottles.go
@@ -1,8 +1,8 @@
 package controller
 
 import (
-	"goprueba/modules/sample/httputil"
-	"goprueba/modules/sample/model"
+	"goprueba/Services/sample/repository"
+	"goprueba/utils"
 	"net/http"
 	"strconv"
 
@@ -18,20 +18,20 @@ import (
 // @Produce  json
 // @Param  id path int true "Bottle ID"
 // @Success 200 {object} model.Bottle
-// @Failure 400 {object} httputil.HTTPError
-// @Failure 404 {object} httputil.HTTPError
-// @Failure 500 {object} httputil.HTTPError
+// @Failure 400 {object} utils.HTTPError
+// @Failure 404 {object} utils.HTTPError
+// @Failure 500 {object} utils.HTTPError
 // @Router /bottles/{id} [get]
 func (c *Controller) ShowBottle(ctx *gin.Context) {
 	id := ctx.Param("id")
 	bid, err := strconv.Atoi(id)
 	if err != nil {
-		httputil.NewError(ctx, http.StatusBadRequest, err)
+		utils.NewError(ctx, http.StatusBadRequest, err)
 		return
 	}
-	bottle, err := model.BottleOne(bid)
+	bottle, err := repository.BottleOne(bid)
 	if err != nil {
-		httputil.NewError(ctx, http.StatusNotFound, err)
+		utils.NewError(ctx, http.StatusNotFound, err)
 		return
 	}
 	ctx.JSON(http.StatusOK, bottle)
@@ -44,14 +44,14 @@ func (c *Controller) ShowBottle(ctx *gin.Context) {
 // @Accept  json
 // @Produce  json
 // @Success 200 {array} model.Bottle
-// @Failure 400 {object} httputil.HTTPError
-// @Failure 404 {object} httputil.HTTPError
-// @Failure 500 {object} httputil.HTTPError
+// @Failure 400 {object} utils.HTTPError
+// @Failure 404 {object} utils.HTTPError
+// @Failure 500 {object} utils.HTTPError
 // @Router /bottles [get]
 func (c *Controller) ListBottles(ctx *gin.Context) {
-	bottles, err := model.BottlesAll()
+	bottles, err := repository.BottlesAll()
 	if err != nil {
-		httputil.NewError(ctx, http.StatusNotFound, err)
+		utils.NewError(ctx, http.StatusNotFound, err)
 		return
 	}
 	ctx.JSON(http.StatusOK, bottles)
